2013-04-29  Nick Alcock  <nick.alcock@oracle.com>

	Move libproc tests into a separate testsuite.

	* test/unittest/libproc/*: Move to...
	* test/internals/libproc/*: ... here.
	* test/triggers/Build (TRIGGERS): Newly compose from...
	(EXTERNAL_TRIGGERS): These, run by 'make check-installed'...
	(INTERNAL_TRIGGERS): ... and these, which are not.
	(trigger-template): No longer add to TRIGGERS (it was redundant
	anyway).
	* runtest.sh: Include 'internals' in default testsuites.
	* Makerules (external-triggers): New target, running over
	EXTERNAL_TRIGGERS.
	(PHONIES): Adjust.
	* Makecheck: Depend on `external-triggers' in installed tests:
	include internal testsuite in other tests.

	* test/triggers/Build: Add rpath to victim processes.

	Bugfixes.

	* libproc/Psymtab.c (Pxlookup_by_name_internal): Do not look at
	executable mappings if mappings cannot be determined.
	(Pobject_iter): Likewise.

	* dt_options.c (dt_opt_runtime): Do not assume that strtoull() can
	produce negative output.
	(dt_optval_parse): Likewise.
	(dt_opt_rate): Likewise.

	Header split.

	* uts/Build (HEADERS_INSTALL): Split into...
	(SYS_HEADERS_INSTALL): ... this, for installs into include/sys/...
	(LINUX_HEADERS_INSTALL): ... and this, for installs into include/linux.
	Install dtrace_cpu_defines.h into linux/; do not install dtrace_ioctl.h
	at all.
	(install): Adjust accordingly.

	* uts/common/sys/dtrace.h: Delete almost all content, reducing to
	#includes of userspace-side types header and two headers provided
	by the dtrace module.
	* uts/common/sys/dtrace_ioctl.h: Delete, now provided by the
	dtrace module.
	* uts/common/sys/dtrace_types.h: Provide dtrace_id_t, not in the
	shared headers.  Drop some unused stuff.
	* libdtrace/dtrace.h (dtrace_probespec_t): This is purely
	userspace: migrated from uts/common/sys/dtrace.h.

	* libdtrace/dt_open.c (dt_vopen): Do an ioctl size dump.
	(dtrace_size_dbg_print): New, dump ioctl sizes under DTRACE_DEBUG.
